# Common-Algorithms-in-Rust

./: Cargo.toml  LICENSE  Readme.md
common/: lib.rs  macros.rs  prints.rs
searches/: binary.rs  linear.rs
sorts/: bubble.rs  insertion.rs  merge.rs  quick.rs  selection.rs
