[package]
name = "Common-Algorithms"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "common/lib.rs"

[[bin]]
name="linear-search"
path="searches/linear.rs"

[[bin]]
name="binary-search"
path="searches/binary.rs"

[[bin]]
name="insertion-sort"
path="sorts/insertion.rs"

[[bin]]
name="bubble-sort"
path="sorts/bubble.rs"

[dependencies]
